# fsvreader

./: .gitignore  .htaccess  Justfile  Makefile  README.md  index.wsgi  mypy.ini  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.yml  ci.yml  scheduled.yml  test.yml
app/: __init__.py  requirements.txt  views.py
app/pages/aldre_lagar/: HL.html  MEL.html  SdmL.html  SmL_Kb.html  VmL.html  Yvgl.html  Yvgl_short.html  content.txt  ÖgL.html
app/pages/aldre_profan/: Ks.html~  content.txt  content.txt~
app/pages/aldre_religios/: Birgitta_aut-B.html  Birgitta_aut-B.html~  content.txt  content.txt~
app/pages/lists/: dirs.txt
app/pages/static/: .fsvreader.html.swp  .lex.html.swp  fsvlex.html  fsvreader.html  reader.css  reader.js
app/templates/: .page_static.html.swp  firstpage.html  fsvtext.html  lex.html  menu.html  reader.html
fsvreader/: config.py  deps.py  errors.py  main.py  metadata.py  server.py  templating.py  views.py
fsvreader/pages/aldre_lagar/: AVgL.html  BjR.html  DL.html  GL.html  MESt.html  SdmL-A.html  SkL.html  UL.html  YVgL.html  content.txt
fsvreader/pages/aldre_profan/: Ks.html
fsvreader/pages/static/: fsvreader.html  reader.js
fsvreader/routes/: __init__.py  dirs.py  lookup.py  reader.py  statics.py
fsvreader/templates/: firstpage.html  page_static.html
scripts/: htmxify-links.py
static/: spinner.css
templates/: 404.html  aldre_lagar.html  aldre_lagar_AVgL.html  aldre_lagar_BjR.html  aldre_lagar_DL.html  aldre_lagar_GL.html  aldre_lagar_HL.html  aldre_lagar_MESt.html  aldre_lagar_SdmL-A.html  aldre_lagar_SkL.html  aldre_lagar_SmL_Kb.html  aldre_lagar_VmL.html  aldre_profan.html  aldre_profan_Ks.html  aldre_religios.html  aldre_religios_Birgitta_aut-B.html  firstpage.html  layout.html  lex.html  menu_layout.html  reader_layout.html
tests/: conftest.py  test_lookup.py  test_views.py
tests/__snapshots__/: test_lookup.ambr
tests/e2e/: conftest.py  test_routes.py  test_views.py
tests/e2e/__snapshots__/: test_routes.ambr
