[project]
name = "fsvreader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = ["flask>=2, <3", "gunicorn>=21.2.0"]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }


[project.optional-dependencies]
ci = ["ruff>=0.1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "watchfiles>=0.21.0",
    "pytest>=7.4.4",
    "mypy>=1.8.0",
    "ruff>=0.1.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
