[project]
name = "fsvreader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "fastapi[standard]>=0.115.2",
    "gunicorn>=21.2.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "jinja2>=3.1.4",
    "karp-api-client",
    "lxml>=5.3.0",
    "asgi-correlation-id>=4.3.4",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fsvreader"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
    "watchfiles>=0.24.0",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",
    "uvicorn>=0.31.1",
    "syrupy>=4.7.2",
]

[tool.uv.sources]
karp-api-client = { git = "https://github.com/spraakbanken/karp-api-client-py" }
